--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,12 @@ on:
 jobs:
   build:
     name: Build and Test
-    runs-on: macos-latest
+    runs-on: macos-13
     
     steps:
+    - name: Select Xcode 15
+      run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
+    
     - name: Checkout code
       uses: actions/checkout@v4
       
