--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: macos-13
     
     steps:
+    - name: Select Xcode 15
+      run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
+    
     - name: Checkout code
       uses: actions/checkout@v4
       
